# ForceAwareACT

./: .gitignore  CODEX_RULES.md  README.md  pyproject.toml
docs/: ACTION_SEMANTICS.md  ACT_ALIGNMENT_AUDIT.md  ACT_BACKBONE_FORCE_EXTENSION_AUDIT.json  ACT_BACKBONE_FORCE_EXTENSION_AUDIT.md  ACT_BASELINE_IMPLEMENTATION.md  ALGORITHM_FRAMEWORK_README.md  ARCHITECTURE.md  ARM_TELEOP_CURRENT_HDF5_RECORDING_AND_COMMAND_AUDIT.md  ARM_TELEOP_HDF5_RECORDING_FIELD_AUDIT.md  ARM_TELEOP_MUJOCO_INTEGRATION_REPORT.md  ARM_TELEOP_MUJOCO_INTEGRATION_SUMMARY.yaml  CHECKPOINT_SAVE_LOGIC_AUDIT.md  COMMAND_ACTION_ROLLOUT.md  COMMAND_ACTION_TRAINING_PIPELINE.md  COMMAND_RECIPES.md  CONTACT_STAGE_ANALYSIS.md  DATASET_ACTION_MODES.md  DUAL_LATENT_ALGORITHM.md  EXPERIMENTS.md  EXPERIMENT_DESIGN_AND_PAPER_POSITIONING.md  EXPERIMENT_WORKFLOWS.md  HDF5_DYNAMIC_JOINT_REPLAY_AUDIT.md  HDF5_REPLAY_TASK_ERROR_AUDIT.md  HISTORICAL_ARM_TELEOP_RECORDING_COMMAND_AUDIT.md  HISTORICAL_CODEBASE_AUDIT_2026-07-07.md  HOLE_POSITION_ROBUSTNESS_EVALUATION.md  MODEL_TRAINING_AND_EARLY_STOPPING_MANUAL.md  NEW_DATASET_TRAINING_MANUAL.md  PEG100_EXPERIMENT_REPORT.md  README.md  REPOSITORY_ARCHITECTURE_AUDIT.md  ROLLOUT_EXPERIMENT_MANUAL.md  ROLLOUT_SUCCESS_AND_SUMMARY.md  SCRIPTS_REFERENCE.md  TESTING.md  VISION_BACKBONE_AUDIT.md  checkpoint_save_logic_audit.json  contact_dynamics_force_act_design.md  forceawareact_codebase_architecture_audit.md
mujoco_data/: DATASET_README.md
scripts/: analyze_contact_latent.py  analyze_contact_stage.py  analyze_rollout_safety_threshold.py  analyze_train_log.py  forceact_eta.py  (+50 more)
(+149 files in other folders)
