[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "force-aware-act"
version = "0.1.0"
description = "Contact-dynamics-aware vision-force ACT research package."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py",
    "numpy",
    "torch",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
